// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render loading state 1`] = `
<div
  class="root"
>
  <div
    class="root field"
    data-testid="select:field"
  >
    <div
      class="reset input-block focused variant-desktop size-l with-label rounds-sm__all"
      data-testid="text-field:block"
      tabindex="0"
    >
      <div
        class="main-column"
      >
        <label
          class="label focused variant-desktop filled"
          data-testid="text-field:label"
        >
          Формат каталога
        </label>
        <div
          class="input-wrapper"
        >
          <div
            class="reset root base-input focused variant-desktop size-l"
            data-testid="base-input:root"
            style="pointer-events: none;"
          >
            <input
              class="field reset"
              data-testid="text-field:field"
              readonly=""
              tabindex="-1"
              value="Карточки товаров JPG"
            />
          </div>
        </div>
      </div>
      <div
        class="display-flex align-items-center M-l__4"
      >
        <svg
          fill="#9e9e9e"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.753 9.659a1 1 0 0 1-1.412.094L8 6.829 4.659 9.753a1 1 0 0 1-1.317-1.506l4-3.5a1 1 0 0 1 1.317 0l4 3.5a1 1 0 0 1 .094 1.412Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="root menu shadow-z4 rounds-md__all"
    data-testid="select:menu"
    role="menu"
    style="top: 56px;"
    tabindex="-1"
  >
    <div
      class="os-host os-host-foreign os-theme-dark os-host-resize-disabled os-host-scrollbar-horizontal-hidden os-host-scrollbar-vertical-hidden custom-scrollbar inner"
    >
      <div
        class="os-resize-observer-host observed"
      >
        <div
          class="os-resize-observer"
          style="right: 0px;"
        />
      </div>
      <div
        class="os-size-auto-observer observed"
        style="height: calc(100% + 1px); float: left;"
      >
        <div
          class="os-resize-observer"
        />
      </div>
      <div
        class="os-content-glue"
        style="margin: 0px 0px 0px 0px; width: -1px; height: -1px;"
      />
      <div
        class="os-padding"
      >
        <div
          class="os-viewport os-viewport-native-scrollbars-overlaid"
          style=""
        >
          <div
            class="os-content-arrange"
          />
          <div
            class="os-content"
            style="padding: 0px 0px 0px 0px; height: 100%; width: 100%;"
          >
            <div
              class="root"
              data-testid="select:loading-area"
            >
              <svg
                class="spinner size-s"
                data-testid="spinner"
                height="20"
                stroke="#1f84db"
                viewBox="0 0 20 20"
                width="20"
              >
                <circle
                  class="circle"
                  cx="10"
                  cy="10"
                  r="9"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-horizontal os-scrollbar-unusable"
      >
        <div
          class="os-scrollbar-track os-scrollbar-track-off"
        >
          <div
            class="os-scrollbar-handle"
            style="transform: translate(0px, 0);"
          />
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-vertical os-scrollbar-unusable"
      >
        <div
          class="os-scrollbar-track os-scrollbar-track-off"
        >
          <div
            class="os-scrollbar-handle"
            style="transform: translate(0, 0px);"
          />
        </div>
      </div>
      <div
        class="os-scrollbar-corner"
      />
    </div>
  </div>
</div>
`;

exports[`Select should renders correctly 1`] = `
<div
  class="root"
>
  <div
    class="root field"
    data-testid="select:field"
  >
    <div
      class="reset input-block variant-desktop size-l with-label rounds-sm__all"
      data-testid="text-field:block"
      tabindex="0"
    >
      <div
        class="main-column"
      >
        <label
          class="label variant-desktop filled"
          data-testid="text-field:label"
        >
          Формат каталога
        </label>
        <div
          class="input-wrapper"
        >
          <div
            class="reset root base-input variant-desktop size-l"
            data-testid="base-input:root"
            style="pointer-events: none;"
          >
            <input
              class="field reset"
              data-testid="text-field:field"
              readonly=""
              tabindex="-1"
              value="Карточки товаров JPG"
            />
          </div>
        </div>
      </div>
      <div
        class="display-flex align-items-center M-l__4"
      >
        <svg
          fill="#9e9e9e"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.247 6.342a1 1 0 0 1 1.412-.095L8 9.171l3.341-2.924a1 1 0 0 1 1.318 1.506l-4 3.5a1 1 0 0 1-1.317 0l-4-3.5a1 1 0 0 1-.095-1.411Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select should renders correctly 2`] = `
<div
  class="root"
>
  <div
    class="root field"
    data-testid="select:field"
  >
    <div
      class="reset input-block focused variant-desktop size-l with-label rounds-sm__all"
      data-testid="text-field:block"
      tabindex="0"
    >
      <div
        class="main-column"
      >
        <label
          class="label focused variant-desktop filled"
          data-testid="text-field:label"
        >
          Формат каталога
        </label>
        <div
          class="input-wrapper"
        >
          <div
            class="reset root base-input focused variant-desktop size-l"
            data-testid="base-input:root"
            style="pointer-events: none;"
          >
            <input
              class="field reset"
              data-testid="text-field:field"
              readonly=""
              tabindex="-1"
              value="Карточки товаров JPG"
            />
          </div>
        </div>
      </div>
      <div
        class="display-flex align-items-center M-l__4"
      >
        <svg
          fill="#9e9e9e"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.753 9.659a1 1 0 0 1-1.412.094L8 6.829 4.659 9.753a1 1 0 0 1-1.317-1.506l4-3.5a1 1 0 0 1 1.317 0l4 3.5a1 1 0 0 1 .094 1.412Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="root menu shadow-z4 rounds-md__all"
    data-testid="select:menu"
    role="menu"
    style="top: 56px;"
    tabindex="-1"
  >
    <div
      class="os-host os-host-foreign os-theme-dark os-host-resize-disabled os-host-scrollbar-horizontal-hidden os-host-scrollbar-vertical-hidden custom-scrollbar inner"
    >
      <div
        class="os-resize-observer-host observed"
      >
        <div
          class="os-resize-observer"
          style="right: 0px;"
        />
      </div>
      <div
        class="os-size-auto-observer observed"
        style="height: calc(100% + 1px); float: left;"
      >
        <div
          class="os-resize-observer"
        />
      </div>
      <div
        class="os-content-glue"
        style="margin: 0px 0px 0px 0px; width: -1px; height: -1px;"
      />
      <div
        class="os-padding"
      >
        <div
          class="os-viewport os-viewport-native-scrollbars-overlaid"
          style=""
        >
          <div
            class="os-content-arrange"
          />
          <div
            class="os-content"
            style="padding: 0px 0px 0px 0px; height: 100%; width: 100%;"
          >
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              <div
                class="col col-center"
              >
                <div
                  class="row-main"
                >
                  ПРАЙС-ЛИСТ XML
                </div>
              </div>
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              <div
                class="col col-center"
              >
                <div
                  class="row-main"
                >
                  ПРАЙС-ЛИСТ YML
                </div>
              </div>
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              <div
                class="col col-center"
              >
                <div
                  class="row-main"
                >
                  КАРТОЧКИ ТОВАРОВ JPG
                </div>
              </div>
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              <div
                class="col col-center"
              >
                <div
                  class="row-main"
                >
                  ФОТО ТОВАРОВ JPG + ПРАЙС-ЛИСТ XLS
                </div>
              </div>
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              <div
                class="col col-center"
              >
                <div
                  class="row-main"
                >
                  ПЕЧАТНЫЙ КАТАЛОГ PDF
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-horizontal os-scrollbar-unusable"
      >
        <div
          class="os-scrollbar-track os-scrollbar-track-off"
        >
          <div
            class="os-scrollbar-handle"
            style="transform: translate(0px, 0);"
          />
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-vertical os-scrollbar-unusable"
      >
        <div
          class="os-scrollbar-track os-scrollbar-track-off"
        >
          <div
            class="os-scrollbar-handle"
            style="transform: translate(0, 0px);"
          />
        </div>
      </div>
      <div
        class="os-scrollbar-corner"
      />
    </div>
  </div>
</div>
`;
